# KeyFlow

./: AUDIT_REPORT.md  Cargo.toml  LICENSE  Makefile  README.en.md  README.md  keyflow.toml.example
.github/workflows/: release.yml
docs/: AUDIT_REPORT.md
docs/superpowers/plans/: 2026-06-12-keyflow-implementation.md  2026-06-15-input-mode.md  2026-06-15-x11-hotkey.md
docs/superpowers/specs/: 2026-06-12-keyflow-design.md  2026-06-15-input-mode-design.md  2026-06-15-x11-hotkey-design.md
packaging/systemd/: keyflow.service
packaging/windows/: install.ps1
src/: crypto.rs  daemon.rs  error.rs  lib.rs  main.rs  windows_service.rs
src/cli/: bind.rs  config_cmd.rs  encrypt.rs  mod.rs  run.rs  status.rs  stop.rs  unlock.rs
src/config/: binding.rs  mod.rs
src/hotkey/: keys.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/provider/: bitwarden.rs  cached.rs  clipboard.rs  mod.rs  static_provider.rs
tests/: config_tests.rs  hotkey_tests.rs  provider_tests.rs
