[package]
name = "keyflow"
version = "0.1.1"
edition = "2021"
description = "Non-paste password input assistant — simulate keystrokes to bypass paste-disabled password fields"
license = "MIT"

[lib]
name = "keyflow"
path = "src/lib.rs"

[[bin]]
name = "keyflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
enigo = { version = "0.2", default-features = false, features = ["x11rb"] }
arboard = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
ctrlc = "3"
rpassword = "7"
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

[dev-dependencies]
tempfile = "3"